got the banner to stick and fixed the z-index issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,29 @@
   }
 }
 
+.banner-wrapper {
+  position: relative;
+  top: 0px;
+  background-color: #272727;
+  width: 100%;
+  height: 150px;
+  z-index: 2;
+}
+
+.banner {
+  position: relative;
+  bottom: -30px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  width: 100%;
+  color: white;
+  z-index: 3;
+}
+
 .album-container {
+  position: relative;
+  bottom: -100px;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -37,9 +59,9 @@
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: space-between;
+  -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
-  justify-content: space-between;
+  justify-content: space-around;
   -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
@@ -47,7 +69,7 @@
   -ms-flex-align: center;
   align-items: center;
   word-wrap: break-word;
-  width: 100%;
+  z-index: 0;
 }
 
 .album-item:nth-child(1) {
@@ -111,13 +133,16 @@
 }
 
 .album-container h4 {
-  margin: 0 auto;
-  padding: 1%;
+  padding: 2% 0 0 3%;
   word-wrap: break-word;
   width: 15%;
 }
 
 .titles-container {
+  position: relative;
+  display: flex;
+  left: 50%;
+  transform: translateX(-50%);
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -130,13 +155,16 @@
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  -webkit-align-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
+  z-index: 5;
+}
+
+.titles-item {
+  position: relative;
+  color: white;
+  justify-content: space-between;
+  display: flex;
+  bottom: -40px;
+  z-index: 6;
 }
 
 .titles-item:nth-child(1) {
@@ -199,6 +227,11 @@
   align-self: auto;
 }
 
+.buttons-container {
+  position: relative;
+  left: -1.5%;
+}
+
 a.addButton {
   position: relative;
   bottom: -75px;
@@ -259,7 +292,7 @@ a.addButton:hover {
 
 .datTotal {
   position: relative;
-  margin: 6.66% 0 0 0;
+  margin: 15% 0 0 0;
   font-family: sans-serif;
   font-size: 2em;
 }
