--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 body {
-  width: 95%;
   margin: 0 auto;
   font-family: sans-serif;
 }
